# ovis

./: .gitignore  CMakeLists.txt  README.md
include/: def.hpp  tokenizer.hpp
include/ovis/: def.hpp  ovis.hpp  tokenizer.hpp
include/ovis/ast/: builder.d.hpp  builder.hpp  builder_state.hpp  generator.hpp  global_keyword_recogniser_builder_state.hpp
include/ovis/ast/generators/: generator.hpp  llvm_generator.hpp
include/ovis/ast/nodes/: binary_operation_builder_node.hpp  builder_node.hpp  cast_int_to_float32_builder_node.hpp  expression_builder_node.hpp  float32_builder_node.d.hpp  float32_builder_node.hpp  float64_builder_node.d.hpp  float64_builder_node.hpp  float_addition_builder_node.hpp  float_binary_operation_builder_node.hpp  float_builder_node.hpp  float_division_builder_node.hpp  float_feature.hpp  float_multiplication_builder_node.hpp  float_subtraction_builder_node.hpp  float_unary_operation_builder_node.hpp  int16_builder_node.d.hpp  int16_builder_node.hpp  int32_builder_node.d.hpp  int32_builder_node.hpp  int64_builder_node.d.hpp  int64_builder_node.hpp  int8_builder_node.d.hpp  int8_builder_node.hpp  int_builder_node.hpp  int_division_builder_node.hpp  uint16_builder_node.d.hpp  uint16_builder_node.hpp  uint32_builder_node.d.hpp  uint32_builder_node.hpp  uint64_builder_node.d.hpp  uint64_builder_node.hpp  uint8_builder_node.d.hpp  uint8_builder_node.hpp  uint_builder_node.hpp  uint_division_builder_node.hpp  unary_operation_builder_node.hpp  xint_addition_builder_node.hpp  xint_binary_operation_builder_node.hpp  xint_builder_node.hpp  (+5 more)
include/ovis/ast/states/: builder_state.hpp  global_command_recogniser_builder_state.d.hpp  global_command_recogniser_builder_state.hpp
src/: main.cpp
test/: test.cpp
